testsuite/tests/properties/invalid_set/not_hashable.lkt
import common

class Example: FooNode {
    @exported
    fun test(): Bool = node.token_start.singleton().to_set()
}

